[refactor] refactor get(0) with getFirst